--- a/.github/workflows/google_scholar_crawler.yaml
+++ b/.github/workflows/google_scholar_crawler.yaml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Reqs
       run: |
-        sudo apt-get install python3-setuptools
+        sudo apt-get install -y python3-setuptools
     - name: Run
       run: |
         cd ./google_scholar_crawler
@@ -21,6 +21,7 @@ jobs:
         cd ./results
         git init
         git config --local user.name "${GITHUB_ACTOR}"
+        git config --local user.email "tandat.kaist@kaist.ac.kr"
         export remote_repo="https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git"
         git add *.json
         git commit -m "Updated Citation Data"
