--- a/.github/workflows/update_github_myprofile.yaml
+++ b/.github/workflows/update_github_myprofile.yaml
@@ -8,15 +8,15 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Reqs
       run: |
-        sudo apt-get install python3-setuptools
+        sudo apt-get install -y python3-setuptools
     - name: Run
       run: |
         cd ./github_myprofile_updater
         python3 update.py
         git init
         git config --local user.name "${GITHUB_ACTOR}"
-        git config --local user.email "rayeren613@gmail.com"
-        export remote_repo="https://${GITHUB_ACTOR}:${{ secrets.GHRS_GITHUB_API_TOKEN }}@github.com/RayeRen/RayeRen.git"
+        git config --local user.email "tandat.kaist@kaist.ac.kr"
+        export remote_repo="https://${GITHUB_ACTOR}:${{ secrets.GHRS_GITHUB_API_TOKEN }}@github.com/${GITHUB_ACTOR}/${GITHUB_ACTOR}.git"
         git add README.md
         git add images
         git commit -m "update my description automatically"
