Update publications layout and add resume link

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ author:
   bio              : "Researcher"
   location         : "Daejeon, Korea"
   employer         :
-  pubmed           : 
+  resume           : "https://flowcv.com/resume/0sg7gc7cdl"
+  pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=4Yr_icEAAAAJ&hl"
   email            : "tandat.kaist@kaist.ac.kr"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
