--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   bio              : "Researcher"
   location         : "Daejeon, Korea"
   employer         :
-  resume           : "https://flowcv.com/resume/0sg7gc7cdl"
+  resume           : "https://soapy-cave-11d.notion.site/CV-Tan-Dat-Nguyen-KAIST-27a367388c7680219580cef443b8eec4"
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=4Yr_icEAAAAJ&hl"
   email            : "tandat.kaist@kaist.ac.kr"
